--- a/api/throwapi/build.gradle
+++ b/api/throwapi/build.gradle
@@ -36,10 +36,15 @@ dependencies {
     implementation 'com.github.f4b6a3:ulid-creator:5.2.0'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
+    //querydsl
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    //스웨거
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4")
+
+    //로그인 및 보안 jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'com.github.f4b6a3:ulid-creator:5.2.0'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
