feat: 위치 권한 얻는 로직 추가 및 현재 위치 추적 로직 작성

--- a/Throw_fornt/app/build.gradle
+++ b/Throw_fornt/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation files('libs/libDaumMapAndroid.jar')
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 }
