--- a/api/throwapi/build.gradle
+++ b/api/throwapi/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.2'
     id 'io.spring.dependency-management' version '1.1.2'
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 's-osteam'
@@ -27,28 +28,33 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-mail'
+//    implementation 'org.springframework.boot:spring-boot-starter-mail'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+//    testImplementation 'org.springframework.security:spring-security-test'
 
     implementation 'com.github.f4b6a3:ulid-creator:5.2.0'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
     //querydsl
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     //스웨거
-    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4")
+//    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4")
 
     //로그인 및 보안 jwt
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+//    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'com.github.f4b6a3:ulid-creator:5.2.0'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+//    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+
+    // hibernate-spatial
+    implementation 'org.hibernate:hibernate-spatial:6.2.6.Final'
 }
 
 tasks.named('test') {
@@ -57,14 +63,23 @@ tasks.named('test') {
 
 def querydslDir = "$buildDir/generated/querydsl"
 
+querydsl {
+    jpa = true
+    querydslSourcesDir = querydslDir
+}
+
 sourceSets {
-    main.java.srcDirs += [querydslDir]
+    main.java.srcDir querydslDir
 }
 
-tasks.withType(JavaCompile) {
-    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
+configurations {
+    querydsl.extendsFrom compileClasspath
 }
 
-clean.doLast {
-    file(querydslDir).deleteDir()
+compileQuerydsl {
+    options.annotationProcessorPath = configurations.querydsl
+}
+
+clean {
+    delete file(querydslDir)
 }
