--- a/api/throwapi/build.gradle
+++ b/api/throwapi/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 's-osteam'
-version = '0.0.1-SNAPSHOT'
+version = '0.1.0'
 
 java {
     sourceCompatibility = '17'
@@ -37,7 +37,8 @@ dependencies {
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
     //querydsl
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
@@ -55,16 +56,12 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-def querydslDir = "$buildDir/generated/querydsl"
+def querydslSrcDir = 'src/main/generated'
 
-sourceSets {
-    main.java.srcDirs += [querydslDir]
+clean {
+    delete file(querydslSrcDir)
 }
 
 tasks.withType(JavaCompile) {
-    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
-}
-
-clean.doLast {
-    file(querydslDir).deleteDir()
+    options.generatedSourceOutputDirectory = file(querydslSrcDir)
 }
