--- a/api/throwapi/build.gradle
+++ b/api/throwapi/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     implementation 'com.github.f4b6a3:ulid-creator:5.2.0'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    // hibernate-spatial
+    implementation 'org.hibernate:hibernate-spatial:6.2.6.Final'
 }
 
 tasks.named('test') {
