--- a/Throw_fornt/app/build.gradle
+++ b/Throw_fornt/app/build.gradle
@@ -60,5 +60,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation files('libs/libDaumMapAndroid.jar')
-    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
