--- a/Throw_fornt/app/src/main/AndroidManifest.xml
+++ b/Throw_fornt/app/src/main/AndroidManifest.xml
@@ -14,15 +14,16 @@
         tools:targetApi="31">
         <activity
             android:name=".feature.store.StoreActivity"
-            android:exported="false" />
-        <activity
-            android:name=".feature.home.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".feature.home.HomeActivity"
+            android:exported="false">
         </activity>
     </application>
 
