feat:사업자등록번호 조회 (#41)
* feat: store request, response모델 추가 및 retorfit 연동

* design: store recyclerview 추가

* design:가게등록 디자인 구성
feat: 사업자등록번호 등록시 등록완료 표시

* design:주소검색

* refactor:코드리뷰 수정

--- a/Throw_fornt/app/src/main/AndroidManifest.xml
+++ b/Throw_fornt/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+  
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -22,6 +22,13 @@
             android:name="com.kakao.sdk.AppKey"
             android:value="${KEY_KAKAO}" />
 
+        <activity
+            android:name=".feature.store.register.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.store.StoreActivity"
+            android:exported="false">
+        </activity>
         <activity
             android:name=".feature.home.HomeActivity"
             android:exported="true">
