--- a/Throw_fornt/app/build.gradle
+++ b/Throw_fornt/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.throw_fornt"
-        minSdk 24
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -53,6 +53,8 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.6.1'   // by activityViewModels()
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 
 
     testImplementation 'junit:junit:4.13.2'
