--- a/Throw_fornt/app/build.gradle
+++ b/Throw_fornt/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation files('libs/libDaumMapAndroid.jar')
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
