--- a/Throw_fornt/app/src/main/AndroidManifest.xml
+++ b/Throw_fornt/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:exported="false" />
         <activity
             android:name=".feature.store.StoreActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".feature.home.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,9 +44,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".feature.home.HomeActivity"
-            android:exported="false" />
     </application>
 
 </manifest>
