--- a/api/throwapi/build.gradle
+++ b/api/throwapi/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 
     // hibernate-spatial
     implementation 'org.hibernate:hibernate-spatial:6.2.6.Final'
+
+    // redisson
+    implementation 'org.redisson:redisson-spring-boot-starter:3.23.4'
 }
 
 tasks.named('test') {
