--- a/Throw_fornt/app/src/main/AndroidManifest.xml
+++ b/Throw_fornt/app/src/main/AndroidManifest.xml
@@ -16,11 +16,40 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Throw_fornt"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:networkSecurityConfig="@xml/network_security_config">
 
-        <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="${KEY_KAKAO}" />
+                <meta-data
+                    android:name="com.kakao.sdk.AppKey"
+                    android:value="${KEY_KAKAO}" />
+
+ <activity
+            android:name=".feature.forget.ForgetPw2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.forget.ForgetId2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.forget.ForgetPwActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.forget.ForgetIdActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.forget.ForgetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.signup.Signup2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.signup.Signup1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.login.LoginActivity"
+            android:exported="true" />
+
+
+
 
         <activity
             android:name=".feature.store.register.RegisterActivity"
@@ -36,6 +65,21 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+<activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Redirect URI: "kakao${NATIVE_APP_KEY}://oauth" -->
+                <data
+                    android:host="oauth"
+                    android:scheme="kakao4969e32d1feec34755a0720a391c6f12" />
             </intent-filter>
         </activity>
     </application>
