--- a/Throw_fornt/app/src/main/AndroidManifest.xml
+++ b/Throw_fornt/app/src/main/AndroidManifest.xml
@@ -12,11 +12,15 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Throw_fornt"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".feature.mileage.MileageActivity"
+            android:exported="false" />
         <activity
             android:name=".feature.store.management.ManagementActivity"
             android:exported="false" />
@@ -33,8 +37,7 @@
             android:exported="false" />
         <activity
             android:name=".feature.store.StoreActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".feature.home.HomeActivity"
             android:exported="true">
