--- a/Throw_fornt/app/build.gradle
+++ b/Throw_fornt/app/build.gradle
@@ -64,5 +64,8 @@ dependencies {
 
     implementation files('libs/libDaumMapAndroid.jar')
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
+    implementation 'com.airbnb.android:lottie:6.1.0'
 }
