--- a/Throw_fornt/app/src/main/AndroidManifest.xml
+++ b/Throw_fornt/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".feature.myPage.profile.ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".feature.mileage.MileageActivity"
             android:exported="false" />
         <activity
@@ -37,7 +40,7 @@
             android:exported="false" />
         <activity
             android:name=".feature.store.StoreActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".feature.home.HomeActivity"
             android:exported="true">
