--- a/api/throwapi/build.gradle
+++ b/api/throwapi/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 
     // hibernate-spatial
     implementation 'org.hibernate:hibernate-spatial:6.2.6.Final'
+
+    implementation group: 'com.google.zxing', name: 'javase', version: '3.5.0'
+    implementation group: 'com.google.zxing', name: 'core', version: '3.5.0'
 }
 
 tasks.named('test') {
